--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+title: Testing Jekyll
+---
 <!doctype html>
 <html>
   <head>
@@ -15,7 +18,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>ctolsen.github.io</h1>
+        <h1>{{ page.title }}</h1>
         <p></p>
 
 
