Add floating menu

--- a/ubertown/index.html
+++ b/ubertown/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Want to see Ubertown burn?</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,19 +21,19 @@
         <div class="container top-menu-container">
           <div class="top-menu inner">
             <ul>
-              <li><a href="#" title="Home">
+              <li><a href="#home" title="Home">
                 <img src="images/home.png">
               </a></li>
-              <li><a href="#" title="Video">
+              <li><a href="#video" title="Video">
                 <img src="images/video.png">
               </a></li>
-              <li><a href="#" title="Intro">
+              <li><a href="#intro" title="Intro">
                 <img src="images/intro.png">
               </a></li>
-              <li><a href="#" title="Rewards">
+              <li><a href="#rewards" title="Rewards">
                 <img src="images/rewards-top.png">
               </a></li>
-              <li><a href="#" title="Costs And Safety">
+              <li><a href="#costs" title="Costs And Safety">
                 <img src="images/costs-and-safety.png">
               </a></li>
             </ul>
@@ -44,6 +44,7 @@
         </div>
 
         <div class="container hero">
+          <a class="anchor" name="home"></a>
           <div class="inner hero-inner">
 
           </div>
@@ -51,6 +52,7 @@
 
         <div class="container">
           <div class="video inner">
+            <a class="anchor" name="video"></a>
             <div class="video-wrapper">
               <iframe src="http://player.vimeo.com/video/22439234" width="581" height="327" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
               </iframe>
@@ -67,6 +69,7 @@
 
         <div class="container">
           <div class="know-more inner">
+            <a class="anchor" name="intro"></a>
             <div class="header-image">
               <img src="images/know-more.png" alt="Want to know more?">
             </div>
@@ -137,6 +140,7 @@
 
         <div class="container">
           <div class="rewards inner">
+            <a class="anchor" name="rewards"></a>
             <div class="header-image">
               <img src="images/rewards-header.png" alt="Rewards">
             </div>
@@ -171,6 +175,7 @@
 
         <div class="container">
           <div class="costs-safety inner">
+            <a class="anchor" name="costs"></a>
 
             <div class="left-col">
               <img src="images/uber.jpg">
