--- a/ubertown/index.html
+++ b/ubertown/index.html
@@ -56,7 +56,7 @@
           <div class="video inner">
             <a class="anchor" id="video" name="video"></a>
             <div class="video-wrapper">
-              <iframe src="http://player.vimeo.com/video/22439234" width="581" height="327" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
+              <iframe src="http://player.vimeo.com/video/97653428" width="581" height="327" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
               </iframe>
 
               <div class="paypal-header">
@@ -148,10 +148,6 @@
             </div>
 
             <div class="left-col">
-              <img src="images/rewards.jpg">
-            </div>
-
-            <div class="right-col">
               <p>It’s important to us that you get something for your
                 contribution. So we’re trying something new for a crowd funding
                 campaign and we're giving you something you can actually use
@@ -159,7 +155,13 @@
                 of Übertown swag as perks.
               </p>
 
-              <img src="images/name-a-cannon.jpg">
+              <img src="images/rewards.jpg">
+            </div>
+
+            <div class="right-col">
+              <img class="dogtag" src="images/dogtag.jpg">
+
+              <img class="cannon" src="images/name-a-cannon.jpg">
             </div>
 
             <div class="clearfix"></div>
