--- a/ubertown/index.html
+++ b/ubertown/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -10,16 +11,23 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=962, initial-scale=1">
 
+        <meta property="og:image" content="http://www.meno.tv/uber/images/thank-you.jpg"/>
+        <meta property="og:title" content="Want to see Übertown burn?"/>
+        <meta property="og:url" content="http://www.ubertownfiredept.org.uk/"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:description"
+            content="We have decided that both Nowhere and Übertown have been
+            flame-free for far too long. With Gladys the fire breathing fire
+            engine at death's door and unlikely to make another apperance,
+            we are picking up the mantle and bringing not 1, not 2, but 4 fire
+            puffers to Übertown." />
+
         <script src="app.js"></script>
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
         <div class="container top-menu-container">
           <div class="top-menu inner">
             <ul>
@@ -39,9 +47,16 @@
                 <img src="images/costs-and-safety.png">
               </a></li>
             </ul>
-            <a class="paypal-image" href="#" title="PayPal – Donate Now">
-              <img src="images/paypal.png">
-            </a>
+          <form class="paypal-image" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_donations">
+<input type="hidden" name="business" value="Ubertownnowhere@gmail.com">
+<input type="hidden" name="lc" value="US">
+<input type="hidden" name="item_name" value="Ubertown Fire Department">
+<input type="hidden" name="no_note" value="0">
+<input type="hidden" name="currency_code" value="GBP">
+<input type="hidden" name="bn" value="PP-DonationsBF:btn_donateCC_LG.gif:NonHostedGuest">
+<input type="image" src="images/paypal.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+</form>
           </div>
         </div>
 
@@ -63,7 +78,17 @@
                 <div class="header-image">
                   <img src="images/convinced.png" alt="You excited yet?">
                 </div>
-                <a href="#" title="PayPal – Donate Now"><img src="images/paypal.png"></a>
+             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_donations">
+<input type="hidden" name="business" value="Ubertownnowhere@gmail.com">
+<input type="hidden" name="lc" value="US">
+<input type="hidden" name="item_name" value="Ubertown Fire Department">
+<input type="hidden" name="no_note" value="0">
+<input type="hidden" name="currency_code" value="GBP">
+<input type="hidden" name="bn" value="PP-DonationsBF:btn_donateCC_LG.gif:NonHostedGuest">
+<input type="image" src="images/paypal.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="images/paypal.png" width="1" height="1">
+</form>
               </div>
             </div>
           </div>
@@ -80,8 +105,8 @@
               <p><em>Übertown</em>, Nowhere’s largest, most kick-ass, party
                 space is back again. Building on the success of our highly
                 impressive theatrical dj stage set-piece at
-                London Decompression, we’re pulling out all the stops and are,
-                once again, setting a new bar for the level of detail and
+                London Decompression, we’re pulling out all the stops and are
+                once again setting a new bar for the level of detail and
                 art-working in Barrio design and decor.
               </p>
 
@@ -91,8 +116,8 @@
               </p>
 
               <p>We don’t want to give the game away too much, it’d spoil the
-                surprise, but
-                <em>one aspect we’re really keen to introduce is FIRE!</em>
+                surprise, but we have decided that both Nowhere and  Übertown have been flame-free for far too long. With Gladys the fire breathing fire engine at death's door and unlikely to make another apperance, we are picking up the mantle
+                and bringing <em>not 1, not 2, but 4 fire puffers to Übertown.</em>
               </p>
 
               <p>This year, excluding food and water for our camp mates,
@@ -105,7 +130,7 @@
               </p>
 
               <p>As a Barrio, we’re ineligible for Art Grant support,
-                nevertheless we’ve always strived to create a camp full of
+                nevertheless we’ve always striven to create a camp full of
                 creative content, to push expectations of what can be achieved
                 and to promote healthy competition between Barrios.
               </p>
@@ -133,7 +158,16 @@
               <div class="header-image">
                 <img src="images/excited-yet.png" alt="You excited yet?">
               </div>
-              <a href="#" title="PayPal – Donate Now"><img src="images/paypal.png"></a>
+                   <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_donations">
+<input type="hidden" name="business" value="Ubertownnowhere@gmail.com">
+<input type="hidden" name="lc" value="US">
+<input type="hidden" name="item_name" value="Ubertown Fire Department">
+<input type="hidden" name="no_note" value="0">
+<input type="hidden" name="currency_code" value="GBP">
+<input type="hidden" name="bn" value="PP-DonationsBF:btn_donateCC_LG.gif:NonHostedGuest">
+<input type="image" src="images/paypal.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+</form>
             </div>
 
             <div class="chevrons"></div>
@@ -154,9 +188,15 @@
                 at a price that doesn’t take the piss! So we’ve designed a load
                 of Übertown swag as perks.
               </p>
+              <p>Of course you can opt out of receiving a reward and help us
+                reach our target faster. Just write the word "GIFT" in the
+                comments box when making your donation. Otherwise, state which
+                perk you would like, and the size of clothing where appropriate.
+                (S,M,L,XL,XXL)</p>
 
-              <img src="images/rewards.jpg">
+                <img src="images/rewards.jpg">
             </div>
+
 
             <div class="right-col">
               <img class="dogtag" src="images/dogtag.jpg">
@@ -170,7 +210,17 @@
               <div class="header-image">
                 <img src="images/picked-your-reward.png" alt="Picked your reward?">
               </div>
-              <a href="#" title="PayPal – Donate Now"><img src="images/paypal.png"></a>
+             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_donations">
+<input type="hidden" name="business" value="Ubertownnowhere@gmail.com">
+<input type="hidden" name="lc" value="US">
+<input type="hidden" name="item_name" value="Ubertown Fire Department">
+<input type="hidden" name="no_note" value="0">
+<input type="hidden" name="currency_code" value="GBP">
+<input type="hidden" name="bn" value="PP-DonationsBF:btn_donateCC_LG.gif:NonHostedGuest">
+<input type="image" src="images/paypal.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
             </div>
 
             <div class="chevrons"></div>
@@ -192,8 +242,8 @@
 
               <p>We are speccing the fire puffers to UK requirements and are
                 taking every care to ensure their safety, as elsewhere in our
-                camp. please take a look at our 2014 Health and safety
-                statement.
+                camp. please take a look at <em><a href="Ubertown_safety_policy_2014.pdf">our 2014 Health and safety statement.</a></em>
+
               </p>
 
               <div class="prices">
@@ -220,7 +270,17 @@
                 <div class="header-image">
                   <img src="images/firefirefire.png" alt="Fire fire fire?">
                 </div>
-                <a href="#" title="PayPal – Donate Now"><img src="images/paypal.png"></a>
+               <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_donations">
+<input type="hidden" name="business" value="Ubertownnowhere@gmail.com">
+<input type="hidden" name="lc" value="US">
+<input type="hidden" name="item_name" value="Ubertown Fire Department">
+<input type="hidden" name="no_note" value="0">
+<input type="hidden" name="currency_code" value="GBP">
+<input type="hidden" name="bn" value="PP-DonationsBF:btn_donateCC_LG.gif:NonHostedGuest">
+<input type="image" src="images/paypal.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="images/paypal.png" width="1" height="1">
+</form>
               </div>
             </div>
 
@@ -230,7 +290,7 @@
 
         <div class="container">
           <div class="thank-you inner">
-            <img src="images/thank-you.jpg"
+            <img src="images/thank-you.jpg">
           </div>
         </div>
 
