--- a/ubertown/index.html
+++ b/ubertown/index.html
@@ -11,15 +11,13 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=962, initial-scale=1">
 
-        <meta property="og:image" content="http://www.meno.tv/uber/images/thank-you.jpg"/>
+        <meta property="og:image" content="images/ubertown-fb.jpg"/>
         <meta property="og:title" content="Want to see Übertown burn?"/>
         <meta property="og:url" content="http://www.ubertownfiredept.org.uk/"/>
         <meta property="og:type" content="website"/>
         <meta property="og:description"
             content="We have decided that both Nowhere and Übertown have been
-            flame-free for far too long. With Gladys the fire breathing fire
-            engine at death's door and unlikely to make another apperance,
-            we are picking up the mantle and bringing not 1, not 2, but 4 fire
+            flame-free for far too long. We are bringing not 1, not 2, but 4 fire
             puffers to Übertown." />
 
         <script src="app.js"></script>
