--- a/ubertown/index.html
+++ b/ubertown/index.html
@@ -16,7 +16,8 @@
         <meta property="og:type" content="website"/>
         <meta property="og:description"
             content="We have decided that both Nowhere and Übertown have been
-            flame-free for far too long. With Gladys the fire breathing fire engine at death's door and unlikely to make another apperance, we are picking up the mantle and bringing not 1, not 2, but 4 fire puffers to Übertown." />
+            flame-free for far too long. We are bringing not 1, not 2, but 4 fire
+            puffers to Übertown." />
 
         <script src="app.js"></script>
 
